@@ -1,3 +1,4 @@
+0.93.1-0 @06/15/2005 14:25:00 UTC@
 0.93.0-0 @06/07/2005 02:35:00 UTC@
 0.92.13-0 @05/13/2005 16:05:00 UTC@
 0.92.12-0 @04/10/2005 18:50:00 UTC@
