@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jun-15-2005 patrickh    Updated to support Windows 64-bit edition.
+                        NEW VERSION: 0.93.1
+
 [1.0 Beta 3 released - 6.7.2005]===============================================
 Jun-07-2005 patrickh    NEW VERSION: 0.93.0
 May-13-2005 allenb      Make the copy constructor on jccl::Configuration
